--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -1,3 +1,5 @@
 <footer>
-  <p>Creado por John Edison Cortes</p>
+  <div class="container">
+    <h3>John Edison Cortes Rivera</h3>
+  </div>
 </footer>
