--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,5 +1,11 @@
-<div>
-  <nav>
-    <div>Icono</div>
-  </nav>
-</div>
+<mat-toolbar color="primary">
+  <mat-toolbar-row >
+    <div class="container">
+      <nav>
+        <div class="box">
+         <h1>MercaApp</h1>
+        </div>
+      </nav>
+    </div>
+  </mat-toolbar-row>  
+</mat-toolbar>
