--- a/src/app/modules/shared/components/sidenav/sidenav.component.html
+++ b/src/app/modules/shared/components/sidenav/sidenav.component.html
@@ -5,9 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item  routerLink="/productos">Inicio</a>
-      <a mat-list-item routerLink="/productos/inventario">Inventario</a>
-      <a mat-list-item routerLink="/productos/crear">Crear Producto</a>
+      <a mat-list-item  routerLink="/productos">Ir a Productos</a>
+      <a mat-list-item  routerLink="/admin">Lista de Productos</a>
+      <a mat-list-item routerLink="/admin/crear">Crear Producto</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
