--- a/src/app/modules/feature/admin/components/product-inventory/product-inventory.component.html
+++ b/src/app/modules/feature/admin/components/product-inventory/product-inventory.component.html
@@ -1,11 +1,11 @@
 <table mat-table [dataSource]="products" class="mat-elevation-z8 product-inventory">
   <ng-container matColumnDef="nombre">
-    <th mat-header-cell *matHeaderCellDef> Nombre </th>
-    <td mat-cell *matCellDef="let product"> {{product.nombre}} </td>
+    <th mat-header-cell *matHeaderCellDef> Producto </th>
+    <td mat-cell *matCellDef="let product"> {{product.nombre | uppercase}} </td>
   </ng-container>
   <ng-container matColumnDef="descripcion">
     <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-    <td mat-cell *matCellDef="let product"> {{product.descripcion}} </td>
+    <td mat-cell *matCellDef="let product"> {{product.descripcion | slice:0:40}} ...</td>
   </ng-container>
   <ng-container matColumnDef="categoria">
     <th mat-header-cell *matHeaderCellDef> Categoria </th>
@@ -13,16 +13,16 @@
   </ng-container>
   <ng-container matColumnDef="precio">
     <th mat-header-cell *matHeaderCellDef> precio </th>
-    <td mat-cell *matCellDef="let product"> {{product.precio}} </td>
+    <td mat-cell *matCellDef="let product"> {{product.precio | currency}} </td>
   </ng-container>
   <ng-container matColumnDef="cantidad">
-    <th mat-header-cell *matHeaderCellDef> En Inventario </th>
+    <th mat-header-cell *matHeaderCellDef> Inventario </th>
     <td mat-cell *matCellDef="let product"> {{product.cantidad}} </td>
   </ng-container>
   <ng-container matColumnDef="accion">
     <th mat-header-cell *matHeaderCellDef> Acciones </th>
     <td mat-cell *matCellDef="let product">
-      <button mat-raised-button class="acciones-productos">Editar</button>
+      <a mat-raised-button class="acciones-productos" [routerLink]="['editar', product._id]">Editar</a>
       <button mat-raised-button class="acciones-productos" color="warn" (click)="deleteProduct(product._id)">Eliminar</button>
     </td>
   </ng-container>
