--- a/src/app/modules/feature/products/components/product-detail/product-detail.component.html
+++ b/src/app/modules/feature/products/components/product-detail/product-detail.component.html
@@ -8,14 +8,19 @@
   <div class="product-container">
     <mat-card class="card">
       <mat-card-title-group>
-        <mat-card-title>{{ producto.nombre }}</mat-card-title>
+        <mat-card-title>{{ producto.nombre | uppercase}}</mat-card-title>
         <mat-card-subtitle>{{ producto.categoria}}</mat-card-subtitle>
-        <mat-card-subtitle>{{ producto.precio}}</mat-card-subtitle>
+        <mat-card-subtitle>{{ producto.precio | currency}}</mat-card-subtitle>
         <img mat-card-xl-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
       </mat-card-title-group>
       <mat-card-content>
         {{ producto.descripcion}}
       </mat-card-content>
+      <mat-card-actions>
+        <a mat-raised-button routerLink="/productos" color="primary">
+          <mat-icon>arrow_back_ios</mat-icon>
+          Volver</a>
+      </mat-card-actions>
     </mat-card>
   </div>
 </section>
