--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,11 +1,21 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row >
-    <div class="container">
+    <div class="row between-xs middle-xs header-row">
       <nav>
         <div class="box">
-         <h1>MercaApp</h1>
+          <span>
+            MercaApp
+          </span>
         </div>
       </nav>
+      <span>
+        <div class="box" layout-align="start center">
+          <a routerLink="admin" mat-raised-button>
+            <mat-icon>store</mat-icon>
+            Administrar
+          </a>
+        </div>
+      </span>
     </div>
-  </mat-toolbar-row>  
+  </mat-toolbar-row>
 </mat-toolbar>
