--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 50px 20px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
