--- a/src/app/modules/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/modules/shared/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,12 @@
-<p>page-not-found works!</p>
+<app-header></app-header>
+<section class="container">
+  <div class="page-not-found">
+    <p class="page-not-found-code">404</p>
+    <p class="page-not-found-ing">Page Not Found</p>
+    <p class="page-not-found-esp">Página No Encontrada</p>
+    <a mat-raised-button routerLink="/productos" color="primary" class="page-not-found-button">
+            <mat-icon>home</mat-icon>
+            Home</a>
+  </div>
+</section>
+<app-footer></app-footer>
