--- a/src/app/modules/feature/admin/components/product-inventory/product-inventory.component.html
+++ b/src/app/modules/feature/admin/components/product-inventory/product-inventory.component.html
@@ -1,23 +1,23 @@
 <table mat-table [dataSource]="products" class="mat-elevation-z8 product-inventory">
   <ng-container matColumnDef="nombre">
-    <th mat-header-cell *matHeaderCellDef> Producto </th>
-    <td mat-cell *matCellDef="let product"> {{product.nombre | uppercase}} </td>
+    <th mat-header-cell *matHeaderCellDef > Producto </th>
+    <td mat-cell *matCellDef="let product" > {{product.nombre | uppercase}} </td>
   </ng-container>
   <ng-container matColumnDef="descripcion">
-    <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-    <td mat-cell *matCellDef="let product"> {{product.descripcion | slice:0:40}} ...</td>
+    <th mat-header-cell *matHeaderCellDef class="product-inventory-hidde-column"> Descripción </th>
+    <td mat-cell *matCellDef="let product" class="product-inventory-hidde-column"> {{product.descripcion | slice:0:40}} ...</td>
   </ng-container>
   <ng-container matColumnDef="categoria">
-    <th mat-header-cell *matHeaderCellDef> Categoria </th>
-    <td mat-cell *matCellDef="let product"> {{product.categoria}} </td>
+    <th mat-header-cell *matHeaderCellDef class="product-inventory-hidde-column"> Categoría </th>
+    <td mat-cell *matCellDef="let product" class="product-inventory-hidde-column"> {{product.categoria}} </td>
   </ng-container>
   <ng-container matColumnDef="precio">
-    <th mat-header-cell *matHeaderCellDef> precio </th>
-    <td mat-cell *matCellDef="let product"> {{product.precio | currency}} </td>
+    <th mat-header-cell *matHeaderCellDef > Precio </th>
+    <td mat-cell *matCellDef="let product" > {{product.precio | currency}} </td>
   </ng-container>
   <ng-container matColumnDef="cantidad">
-    <th mat-header-cell *matHeaderCellDef> Inventario </th>
-    <td mat-cell *matCellDef="let product"> {{product.cantidad}} </td>
+    <th mat-header-cell *matHeaderCellDef class="product-inventory-td-response"> Inventario </th>
+    <td mat-cell *matCellDef="let product" class="product-inventory-td-response"> {{product.cantidad}} </td>
   </ng-container>
   <ng-container matColumnDef="accion">
     <th mat-header-cell *matHeaderCellDef> Acciones </th>
