--- a/src/app/modules/feature/products/components/product-detail/product-detail.component.html
+++ b/src/app/modules/feature/products/components/product-detail/product-detail.component.html
@@ -1,10 +1,4 @@
-<!-- 
-  se agrega el *ngIf="productos" es para evitar mostrar errores
-  cuando el componente realiza la consulta a la API este toma un tiempo X
-  durante ese tiempo producto es undefined por lo que se muestra un error
-  entonces lo que se hace es un if para decir que cuando sea valida se muestre
--->
-<section class="product-card" *ngIf="producto">
+<!-- <section class="product-card" *ngIf="producto">
   <div class="product-container">
     <mat-card class="card">
       <mat-card-title-group>
@@ -23,5 +17,27 @@
       </mat-card-actions>
     </mat-card>
   </div>
-</section>
+</section> -->
+<mat-card class="card">
+  <mat-card-header>
+    <div mat-card-avatar class="card-header-image"></div>
+    <mat-card-title>{{ producto.nombre  | uppercase }}</mat-card-title>
+    <mat-card-subtitle>{{ producto.categoria}}</mat-card-subtitle>
+  </mat-card-header>
+  <div class="card-container-img">
+    <img mat-card-im  age src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+  <!-- <img mat-card-image src="https://landscape3design.com/wp-content/uploads/2015/04/demo.png" width="250" alt="Foto de producto"> -->
+  </div>
+
+  <mat-card-content>
+    <p>{{ producto.descripcion}}</p>
+    <p class="product-price">{{ producto.precio | currency}}</p>
+    <!-- <p class="product-inventory">{{ producto.cantidad}}</p> -->
+  </mat-card-content>
+  <mat-card-actions>
+    <a mat-raised-button routerLink="/productos" color="primary">
+          <mat-icon>arrow_back_ios</mat-icon>
+          Volver</a>
+  </mat-card-actions>
+</mat-card>
 
